package org.asif.buttons;

/**
 * Common interface for all buttons.
 */
public interface Button {
    void render();

    void onClick();
}
